@@ -137,4 +137,14 @@ valgrind-tokyocabinet:
 	$(VALGRIND_COMMAND) $(TOKYOCABINET_TEST) $(ARG1) $(ARG2)
 	$(TOKYOCABINET_RM)
 
+GEARMAN_CLIENT_TEST= bin/gearman
+GEARMAN_PIDFILE = ${abs_top_builddir}/tests/Xugear.pid
+
+client-test: $(GEARMAN_CLIENT_TEST)
+	@$(GEARMAN_CLIENT_TEST) -H 2>&1 > /dev/null
+	@$(GEARMAN_CLIENT_TEST) -w -f true -d -i $(GEARMAN_PIDFILE) -- false
+	cat $(GEARMAN_PIDFILE) | xargs kill
+	@echo "gearman client success"
+
 valgrind: ${noinst_PROGRAMS} valgrind-client valgrind-worker valgrind-internals valgrind-sqlite valgrind-tokyocabinetn
+
